--- a/.github/workflows/my-ci-cd-pipeline.yaml
+++ b/.github/workflows/my-ci-cd-pipeline.yaml
@@ -39,8 +39,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Login to Dockerhub
         env:
-            DOCKER_USERNAME: ${{ secrets.manar02 }}
-            DOCKER_PASSWORD: ${{ secrets.2002 01 15 }}
+            DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+            DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - name: Build docker image
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/github-action-school .
